--- a/src/app/Telegram/styles.css
+++ b/src/app/Telegram/styles.css
@@ -118,29 +118,37 @@
 
 /* Mobile View Adjustments */
 @media (max-width: 768px) {
+.sidebar {
+  position: absolute;
+  left: 30px;
+  /* transform: translateY(-50%); */
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-top: 50px;
+}
 .sidebar-icon1 {
-  width: 50px;
+  /* width: 50px;
   height: 50px;
   background-color: #FFFFFF;
-  border-radius: 50%;
+  border-radius: 10%;
   cursor: pointer;
   opacity: 0.7;
   position: absolute;
   left: 10%;
   top: 50px;
-  /* transform: translateY(-50%); */
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 10px; */
+  display: none !important; /* Hide all elements except the background */
+
 }
 .sidebar-icon2 {
   color: aliceblue;
   cursor: pointer;
-  /* opacity: 0.7; */
   position: absolute;
-  left: 30%;
+  left: 20%;
   top: 50px;
-  /* transform: translateY(-50%); */
   display: flex;
   flex-direction: column;
   gap: 1px;
